--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
         </div>
 
         <button class="btn btn-custom-red mb-3"><strong>Create an event</strong></button>
-        <button class="btn btn-peach mb-3"><strong>Get Listed on Vendor Market Place</strong></button>
-        <button class="btn btn-offwhite"><strong>Sign In</strong></button>
+        <a><button class="btn btn-offwhite"><strong>Sign In</strong></button></a>
+        
       </div>
 
       <div class="col-md-5 right-panel"> <img src="LSimage2.png" alt="Background Image" />
